languages/io-automaton-fe/src/test/resources/valid/alternatives/ModelWithAltAndList.ioautomaton
package valid.alternatives;

import valid.alternatives.ArrayWrapper;

automaton ModelWithAltAndList {

    input ArrayWrapper arr;
    variable int temp;    
    output int out;
    
    state Start;
    initial Start;
    
    Start {var = temp.getArr()[0]} / {out = 3|4};
    Start /{out = [3|4]};
}